# attachment-agent

./: .env.example  .gitignore  MANIFEST.in  README.md  credentials.example.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
src/: main.py
src/processors/: attachment_processor.py
src/services/: dropbox_service.py  gmail_service.py
tests/: test_attachment_processor.py  test_dropbox_service.py  test_gmail_service.py
